initial formats support

--- a/src/test/resources/L10n/en-US.properties
+++ b/src/test/resources/L10n/en-US.properties
@@ -8,6 +8,23 @@ _system.nplurals = 2
 _system.plural = (count != 1);
 _system.escapeHtml = true
 
+# formats
+_format.special.type = number
+_format.special.decimalSeparator = |
+
+_format.notype.groupingSeparator =
+
+_format.unknowntype.type = unknown
+
+_format.curr.type = currency
+#_format.curr.decimalSeparator = |
+_format.curr.monetaryDecimalSeparator = *
+_format.curr.groupingSeparator = ;
+_format.curr.currencySymbol = $$
+
+_format.percent.type = percent
+_format.percent.percent = &
+
 # translations
 
 # potentially "crash" keys
