date/time formats

--- a/src/test/resources/L10n/en-US.properties
+++ b/src/test/resources/L10n/en-US.properties
@@ -17,13 +17,15 @@ _format.notype.groupingSeparator =
 _format.unknowntype.type = unknown
 
 _format.curr.type = currency
-#_format.curr.decimalSeparator = |
 _format.curr.monetaryDecimalSeparator = *
 _format.curr.groupingSeparator = ;
 _format.curr.currencySymbol = $$
 
 _format.percent.type = percent
-_format.percent.percent = &
+_format.percent.percentSymbol = &
+
+_format.np1.type = number
+_format.np1.pattern = #0.0
 
 # translations
 
