--- a/src/test/resources/L10n/en-US.properties
+++ b/src/test/resources/L10n/en-US.properties
@@ -27,6 +27,13 @@ _format.percent.percentSymbol = &
 _format.np1.type = number
 _format.np1.pattern = #0.0
 
+_format.dt1.type = datetime
+_format.dt1.dateStyle = full
+_format.dt1.timeStyle = short
+
+_format.dt2.type = datetime
+_format.dt2.pattern = yyyy-MM-dd'T'HH:mm:ssXXX
+
 # translations
 
 # potentially "crash" keys
