--- a/src/test/resources/L10n/en-US.properties
+++ b/src/test/resources/L10n/en-US.properties
@@ -3,7 +3,7 @@
 
 # system properties section
 _system.id = test-app
-_system.locale = en-US
+_system.languageTag = en-US
 _system.nplurals = 2
 _system.plural = (count != 1);
 _system.escapeHtml = true
@@ -11,10 +11,6 @@ _system.escapeHtml = true
 # formats
 _format.special.type = number
 _format.special.decimalSeparator = |
-
-_format.notype.groupingSeparator =
-
-_format.unknowntype.type = unknown
 
 _format.curr.type = currency
 _format.curr.monetaryDecimalSeparator = *
