--- a/src/test/resources/L10n/ru-RU.properties
+++ b/src/test/resources/L10n/ru-RU.properties
@@ -3,7 +3,7 @@
 
 # system properties section
 _system.id = test-app
-_system.locale = ru-RU
+_system.languageTag = ru-RU
 _system.nplurals = 3
 _system.plural = (count%10==1 && count%100!=11 ? 0 : count%10>=2 && count%10<=4 && (count%100<10 || count%100>=20) ? 1 : 2);
 _system.escapeHtml = true
