--- a/src/test/resources/L10n/ru-RU.properties
+++ b/src/test/resources/L10n/ru-RU.properties
@@ -8,6 +8,11 @@ _system.nplurals = 3
 _system.plural = (count%10==1 && count%100!=11 ? 0 : count%10>=2 && count%10<=4 && (count%100<10 || count%100>=20) ? 1 : 2);
 _system.escapeHtml = true
 
+# formats
+
+_format.numb.type = number
+_format.numb.groupingUsed = false
+
 # translation keys section
 
 x.y.z.apple.0 = Вообще нет яблок
