A bit cleaning in tests and README.md

--- a/src/test/resources/L10n/en-US.properties
+++ b/src/test/resources/L10n/en-US.properties
@@ -46,3 +46,9 @@ test.param.second$html = {{second}}, {{second}}, {{second}}; <strong>{{first}}, 
 # normal keys
 super.key = Super value
 super.htmlkey$html = Super <br/> value
+
+x.y.z.apple = apples by default
+x.y.z.apple.0 = no any apples
+x.y.z.apple.1 = one apple
+x.y.z.apple.22$html = special case:<br/> 22 apples
+x.y.z.apple.$1$html = {{count}}<br/> apples
