AbstractLocalization, WatchLoggingLocalization & it's tests, some bugs fixing

--- a/src/test/resources/L10n/ru-RU.properties
+++ b/src/test/resources/L10n/ru-RU.properties
@@ -15,6 +15,9 @@ _format.numb.groupingUsed = false
 
 # translation keys section
 
+# normal keys
+super.key = Супер
+
 x.y.z.apple.0 = Вообще нет яблок
 x.y.z.apple.1 = Одно яблоко
 x.y.z.apple.$0 = {{count}} яблоко
