--- a/src/test/resources/L10n/en-US.properties
+++ b/src/test/resources/L10n/en-US.properties
@@ -52,3 +52,6 @@ x.y.z.apple.0 = no any apples
 x.y.z.apple.1 = one apple
 x.y.z.apple.22$html = special case:<br/> 22 apples
 x.y.z.apple.$1$html = {{count}}<br/> apples
+
+#format
+formated.param = super number: {{supernumber,np1}}
